# ox-fast-mcp

./: .gitignore  .ocamlformat  AGENTS_COMPLIANCE.todo  CHANGELOG.md  CI_SETUP.md  GEMINI.md  LICENSE  README.md  SIMPLE_MINDSET.md  SIMPLE_MINDSET_GUIDE.md  build-errors.todo  build-warnings.todo  build_status.todo  deps-only.opam  dune-project  ox-fast-mcp.opam  project_guidelines.todo  utilities-logging-integration.todo
examples/: README.md  calculator_server.ml  demo.ml  dune  dune.deferred  http_demo.ml  test_session.ml
examples/atproto_server/: README.md  atproto_server.ml  dune  settings.ml  test_atproto_types.ml  types.ml
examples/calculator_server/: dune  main.ml  test_calculator.ml
examples/complex_inputs/: dune  main.ml  shrimp_server.ml  test_complex_inputs.ml
examples/config_server/: config_server.ml  dune  main.ml  test_config_server.ml
examples/fastmcp_config/: config.ml  dune  env_interpolation_example.json  fastmcp.json  full_example.fastmcp.json  main.ml  test_http_load.ml
examples/fastmcp_config_demo/: config.ml  dune  fastmcp.json  main.ml
examples/smart_home/: config.ml  dune  hub.fastmcp.json  hub.ml  lights.ml  phue.ml  run_with_docker.sh  test_config.json  test_smart_home.ml  thermostat.ml
examples/testing_demo/: demo_server.ml  dune  main.ml  test_server.ml
lib/: dune  exceptions.ml  exceptions.mli  fast_mcp_server.ml  fast_mcp_server.mli  fastmcp.ml  fastmcp.mli  mcp_client.ml  mcp_types.ml  ox_fast_mcp.ml  ox_fast_mcp.mli  settings.ml  settings.mli  settings.todo.md  version.ml  version.mli
lib/cli/: cli.ml  dune
lib/client/: client.ml  client.mli  dune  logging.ml  logging.mli  messages.ml  messages.mli  progress.ml  progress.mli  roots.ml  roots.mli  sampling.ml  sampling.mli
lib/exceptions/: dune
lib/mcp/: dune  dune.deferred  mcp_client.ml  mcp_client.mli  mcp_error.ml  mcp_error.mli  types.ml  types.mli
lib/mcp_types/: dune.deferred  types.ml  types.mli
lib/prompts/: prompt.ml
lib/resources/: dune  resource.ml  resource.mli  resource_manager.ml  resource_manager.mli  template.ml  template.mli  types.ml  types.mli
lib/server/: dependencies.ml  dependencies.mli  http.ml  http.mli  low_level.ml  low_level.mli  openapi.ml  openapi.mli  server.ml  server.mli
lib/shared/: dune
lib/tools/: dune  errors.ml  errors.mli  tool.ml  tool.mli  tool_manager.ml  tool_manager.mli  tool_transform.ml  tool_transform.mli  tool_types.ml
lib/utilities/: cache.ml  cache.mli  components.ml  components.mli  components.todo  dune  exceptions.ml  exceptions.mli  fast_mcp_error.ml  fast_mcp_error.mli  fmcp_types.ml  fmcp_types.mli  http.ml  http.mli  http.todo  json_schema.ml  json_schema.mli  log_formatter.ml  log_formatter.mli  log_handler.ml  log_handler.mli  log_types.ml  log_types.mli  logging.ml  logging.mli  logging.todo  mcp_config.ml  mcp_config.todo  nested_settings.ml  nested_settings.mli  openapi.ml  openapi.mli  types.ml  types.mli  types.todo
src/client/: client.ml  client.mli  dune  logging.ml  logging.mli  messages.ml  messages.mli  progress.ml  progress.mli  roots.ml  roots.mli  sampling.ml  sampling.mli  transports.ml  transports.mli
src/resources/: dune  dune.deferred  resource.ml  resource.mli  resource_manager.ml  resource_manager.mli  resource_types.ml  resource_types.mli  template.ml  template.mli  types.ml  types.mli
src/server/: context.ml  context.mli  dependencies.ml  dependencies.mli  dune  dune.deferred  elicitation.ml  elicitation.mli  http.ml  http.mli  input_validation.ml  input_validation.mli  low_level.ml  openapi.ml  openapi.mli  proxy.ml  proxy.mli  server.ml  server.mli  server_prompt_adapter.ml  server_prompt_adapter.mli  server_resource_adapter.ml  server_resource_adapter.mli  server_tool_adapter.ml  server_tool_adapter.mli  session_bridge.ml  session_bridge.mli  stdio_transport.ml  stdio_transport.mli
src/utilities/: cache.todo  components.ml  components.mli  components.todo  dune  fmcp_types.ml  fmcp_types.mli  headless_oauth.ml  headless_oauth.mli  http.todo  json_schema.ml  json_schema.mli  json_schema.todo  log.ml  log.mli  log_formatter.ml  log_handler.ml  log_types.mli  logging.ml  logging.mli  logging.todo  manager.ml  manager.mli  mcp_config.ml  mcp_config.mli  mock_oauth_server.ml  mock_oauth_server.mli  secret_string.ml  secret_string.mli  utilities_types.ml  utilities_types.mli
test/: dune  run_tests.ml  test_client.ml  test_client.mli  test_exceptions.ml  test_exceptions.todo  test_fast_mcp_server.ml  test_mcp_client.ml  test_mcp_types.ml  test_settings.ml  test_test.ml
test/client/: dune  test_client.ml  test_client_connection.ml  test_client_errors.ml  test_client_serialization.ml  test_client_tagged.ml  test_client_transport.ml  test_session.ml
test/contrib/: dune  test_bulk_tool_caller.ml  test_mcp_mixin.ml
test/mcp/: dune  test_auth_context.ml  test_auth_context.todo  test_types.ml  test_types.todo
test/prompts/: dune  dune.deferred  test_prompt.ml  test_prompt.ml.disabled  test_prompt_manager.ml
test/resources/: dune  test_resource_manager.ml
test/server/: dune  test_app_state.ml  test_auth_integration.ml  test_context_capabilities.ml  test_context_delegation.ml  test_context_http.ml  test_context_sampling.ml  test_enhanced_errors.ml  test_experimental_openapi_feature_flag.ml  test_file_server.ml  test_http_sse.ml  test_icons.ml  test_import_server.ml  test_input_validation.ml  test_log_level.ml  test_logging.ml  test_server.ml  test_server_functionality.ml  test_server_helpers.ml  test_server_improvements.ml  test_server_stats.ml  test_server_utilities.ml  test_session_notifications.ml  test_validation.ml
test/tools/: dune  test_tool.ml  test_tool_manager.ml  test_tool_manager.todo.md  test_tool_transform.ml  test_tool_transform.ml.disabled  test_tool_transform.todo
test/utilities/: dune  json_schema.todo  run_tests.ml  test_cache.ml  test_cache.todo  test_components.ml  test_exceptions.ml  test_fmcp_types.ml  test_fmcp_types.todo  test_http.ml  test_http.todo  test_inspect.ml  test_json_schema.ml  test_json_schema.todo  test_logging.ml  test_logging.todo  (+6 more)
(+438 files in other folders)
