opam-version: "2.0"

depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.0" & >= "3.0"}
  "core" {>= "v0.16.0"}
  "core_unix" {>= "v0.16.0"}
  "async" {>= "v0.16.0"}
  "async_log" {>= "v0.18~preview.130.36+326"}
  "base" {>= "v0.18~preview.130.36+326"}
  "cohttp-lwt-unix" {>= "4.0.0"}
  "logs" {>= "0.8.0"}
  "lwt" {>= "5.9.1"}
  "magic-mime" {>= "1.3.1"}
  "ppx_jane" {>= "v0.16.0"}
  "ppx_compare" {>= "v0.18~preview.130.36+326"}
  "ppx_sexp_conv" {>= "v0.18~preview.130.36+326"}
  "ppx_sexp_message" {>= "v0.18~preview.130.36+326"}
  "ppx_yojson_conv" {>= "v0.16.0"}
  "ppx_yojson_conv_lib" {>= "v0.16.0"}
  "yojson" {>= "2.1.0"}
  "base64" {>= "3.5.0"}
  "expect_test_helpers_core" {with-test}
  "ppx_expect" {with-test}
  "odoc" {with-doc}
  "uri" {>= "4.4.0"}
  "stdio" {with-test & >= "v0.18~preview.130.36+326"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
synopsis: "OCaml implementation of FastMCP"

description: "OCaml implementation of FastMCP using Jane Street libraries" 
