opam-version: "2.0"
name: "ox-fast-mcp"
version: "0.1.0"
maintainer: "Norwen Gonio <neuro-ng@github.com>"
authors: ["Norwen Gonio"]
license: "Apache-2.0"
homepage: "https://github.com/neuro-ng/ox-fast-mcp"
doc: "https://github.com/neuro-ng/ox-fast-mcp"
bug-reports: "https://github.com/neuro-ng/ox-fast-mcp/issues"
dev-repo: "git+https://github.com/neuro-ng/ox-fast-mcp.git"

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.0"}
  "odoc" {with-doc}
]

synopsis: "Fast, functional way to build MCP servers and clients in OCaml"

description: """
An OCaml implementation of FastMCP inspired by the Python library, providing 
a high-level, type-safe interface for building Model Context Protocol (MCP) 
servers and clients using functional programming principles.

Features:
- Fast: High-level interface with minimal boilerplate
- Type-Safe: Leverages OCaml's strong type system  
- Functional: Built with functional programming principles
- TDD: Developed using Test-Driven Development
- Complete: Full MCP protocol implementation for servers and clients
- Interoperable: Compatible with other MCP implementations
""" 