(executable
 (public_name demo)
 (name demo)
 (modules demo)
 (libraries ox_fast_mcp server))

(executable
 (public_name http-demo)
 (name http_demo)
 (modules http_demo)
 (libraries ox_fast_mcp server core async cohttp-async))

(executable
 (name test_session)
 (modules test_session)
 (libraries core async yojson)
 (preprocess
  (pps ppx_jane)))
