(library
 (name test_ox_fmcp)
 (libraries
  core
  core_unix
  async
  expect_test_helpers_core
  ox_fast_mcp
  ox-fast-mcp.utilities
  ox-fast-mcp.mcp
  ox-fast-mcp.server.auth.middleware
  cohttp
  lwt
  uri)
 (inline_tests)
 (flags
  (:standard -alert -unsafe_multidomain))
 (preprocess
  (pps ppx_jane ppx_expect)))
