(library
 (name oxfmcp_utils)
 (public_name ox-fast-mcp.utilities)
 (wrapped false) 
 (libraries
  core
  async
  core_unix.command_unix
  core_unix.time_float_unix
  ppx_compare.runtime-lib
  base64
  magic-mime
  yojson)
 (preprocess
  (pps ppx_jane ppx_yojson_conv))
 (instrumentation
  (backend bisect_ppx)))
  