; Client library - PARTIAL IMPLEMENTATION
; Transports module added with base types and constructors
; See transports.todo for implementation status (30% complete)

(library
 (name client_lib)
 (public_name ox-fast-mcp.client_lib)
 (libraries base core async yojson uri cohttp-lwt-unix logs lwt ox-fast-mcp)
 (modules transports)
 (preprocess
  (pps ppx_jane)))
