; Client library - Full implementation
; All modules enabled with Async support

(library
 (name ox_fast_mcp_client)
 (public_name ox-fast-mcp.client)
 (libraries
  base
  core
  async
  yojson
  uri
  logs
  ox-fast-mcp
  ox-fast-mcp.mcp
  ox-fast-mcp.mcp.client
  ox-fast-mcp.mcp.client.transports
  ox-fast-mcp.mcp.shared)
 (modules client transports roots sampling logging progress messages)
 (preprocess
  (pps ppx_jane)))
