(library
 (name utilities)
 (public_name ox-fast-mcp.utilities)
 (wrapped false)
 (libraries
  core
  async
  async_log
  core_unix
  core_unix.command_unix
  core_unix.time_float_unix
  ppx_compare.runtime-lib
  ppx_sexp_conv.runtime-lib
  ppx_yojson_conv_lib
  base64
  magic-mime
  ppx_yojson_conv
  yojson)
 (preprocess
  (pps ppx_jane ppx_compare ppx_sexp_conv ppx_sexp_message ppx_yojson_conv))
 (instrumentation
  (backend bisect_ppx)))
