(library
 (public_name ox-fast-mcp.tests.tools)
 (name test_tools)
 (modules test_tool_transform)
 (libraries 
   core
   base
   stdio
   expect_test_helpers_core
   tools
   utilities
   ox_fast_mcp
   yojson
   lwt
   lwt.unix
   async
   re)
 (preprocess (pps 
   ppx_jane
   ppx_expect
   ppx_yojson_conv
   lwt_ppx))
 (inline_tests))
