(library
 (name server_middleware)
 (public_name ox-fast-mcp.server.middleware)
 (libraries
  core
  async
  yojson
  ppx_yojson_conv_lib
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  logs
  lwt
  ox-fast-mcp
  ox-fast-mcp.mcp
  ox-fast-mcp.mcp.shared
  ox-fast-mcp.shared
  ox-fast-mcp.tools
  ox-fast-mcp.utilities)
 (preprocess
  (pps ppx_jane ppx_let ppx_yojson_conv)))
